# Coriolis-data-processing-chain-for-Argo-floats-container

./: .env  .env.demo  .env.docs  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  PYTHON_BINDINGS.md  README.md  bindings.Dockerfile  compose.matlab-runtime.yaml  compose.override.yml  compose.yaml  compose.yml  docker-compose.yaml  docker-compose.yml  docker-decoder-linux.sh  docker-decoder-matlab-linux.sh  docker-decoder-matlab-windows.bat  docker-decoder-python-binding-linux.sh  docker-decoder-python-binding.sh  docker-decoder-windows.bat  entrypoint.sh
.github/workflows/: ci.yaml  publish.yaml
decArgo_api/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml  python-app.Dockerfile  ruff.toml
decArgo_api/decoder_api/: __init__.py  api.py  app.py  main.py
decArgo_api/decoder_bindings/: __init__.py  main.py  settings.py
decArgo_api/decoder_bindings/mock_data/: __init__.py  float1.py  float_6902892.py
decArgo_api/decoder_bindings/utilities/: dict2json.py
decArgo_api/decoder_wrapper/: main.py  settings.py
decArgo_api/decoder_wrapper/utilities/: dict2json.py
decArgo_api/tests/: __init__.py  test_decoder_bindings.py  test_integration_decoder_bindings.py  test_main.py
decArgo_api/tests/data/config/: decoder_conf_for_6902892.json  decoder_conf_for_6903014.json  decoder_conf_for_6904182.json  docker_decoder_conf_for_6904182.json
decArgo_api/tests/data/mock/: float_6903014.py  float_6904182.py
decArgo_config_floats/argoFloatInfo/: argo_floats_information_co.txt  argo_floats_information_co.xls
decArgo_config_floats/json_float_info/: 3901839_xxxxxxxxxxxxxxx_info.json  3901840_xxxxxxxxxxxxxxx_info.json  3901845_xxxxxxxxxxxxxxx_info.json  3901848_xxxxxxxxxxxxxxx_info.json  3901849_xxxxxxxxxxxxxxx_info.json  3901850_xxxxxxxxxxxxxxx_info.json  3901851_xxxxxxxxxxxxxxx_info.json  6902687_150947_info.json  6902688_150948_info.json
decArgo_config_floats/json_float_meta_argos/: 6902687_meta.json  6902688_meta.json
decArgo_config_floats/json_float_meta_ir_rudics_remocean/: 6901649_meta.json  6901766_meta.json
decArgo_config_floats/json_float_meta_ir_sbd/: 3901839_meta.json  3901840_meta.json  3901845_meta.json  3901848_meta.json  3901849_meta.json  3901850_meta.json  3901851_meta.json
decArgo_config_floats/json_float_meta_ir_sbd_remocean/: 2902091_meta.json  2902092_meta.json
decArgo_demo/config/: ar_greylist.txt  decoder_conf.json
decArgo_doc/Setup_and_running_decoder_with_sample_BODC_float/: README.md
decArgo_doc/decoder_user_manual/: _CoriolisArgoFloatVersions_20221110.xlsx  _CoriolisArgoFloatVersions_20240130.xlsx  _CoriolisArgoFloatVersions_20240516.xlsx
decArgo_doc/decoder_versions/: _argo_decoder_versions.xlsx  _argo_tools_histo_soft.xlsx  matlab_DOXY_versions_20180919.xlsx
decArgo_soft/config/_configParamNames/: _config_param_name_212.csv  _config_param_name_212.json  _config_param_name_214.csv  _config_param_name_214.json  _config_param_name_215.csv  _config_param_name_216.json  _config_param_name_218.csv  _config_param_name_218.json  _config_param_name_221.csv  _config_param_name_221.json  _config_param_name_222.csv  _config_param_name_222.json  _config_param_name_223.csv  _config_param_name_224.csv  _config_param_name_224.json  _config_param_name_225.json  _config_param_name_226.csv  _config_param_name_226.json  _config_param_name_227.csv  _config_param_name_227.json  _config_param_name_228.csv  _config_param_name_228.json
decArgo_soft/config/_techParamNames/: _tech_param_name_128.csv  _tech_param_name_128.json  _tech_param_name_212.csv  _tech_param_name_212.json  _tech_param_name_214.csv  _tech_param_name_216.csv  _tech_param_name_216.json  _tech_param_name_217.json  _tech_param_name_218.csv  _tech_param_name_218.json  _tech_param_name_221.csv  _tech_param_name_221.json  _tech_param_name_222.csv  _tech_param_name_222.json  _tech_param_name_224.csv  _tech_param_name_227.json  _tech_param_name_228.csv  _tech_param_name_228.json
decArgo_soft/config/configuration_sample_files/: _argo_decoder_20160708_conf_argos.json  _argo_decoder_20160708_conf_ir_rudics_rem.json  _argo_decoder_20160708_conf_ir_sbd.json  _argo_decoder_20160708_conf_ir_sbd_rem.json  _argo_decoder_argos_conf.txt  _argo_decoder_ir_rudics_rem_conf.txt  _argo_decoder_ir_sbd_conf.txt  _argo_decoder_ir_sbd_rem_conf.txt
decArgo_soft/config/configuration_sample_files_docker/: _argo_decoder_argos_conf.txt  _argo_decoder_conf_argos.json  _argo_decoder_conf_ir_rudics_rem.json  _argo_decoder_conf_ir_sbd_rem.json  _argo_decoder_ir_sbd_rem_conf.txt
decArgo_soft/exec/: run_decode_argo_2_nc_rt.sh  run_decode_argo_2_nc_rt.sh.old  run_decode_argo_2_nc_rt.tmp.sh
decArgo_soft/soft/: _argo_decoder_conf.json  _argo_decoder_conf.txt
decArgo_soft/soft/decoder_api/: .gitignore  README.md  pyproject.toml  python-app.Dockerfile  ruff.toml
decArgo_soft/soft/decoder_api/config_files/: decoder_conf.json
decArgo_soft/soft/decoder_api/decoder_bindings/: __init__.py  main.py
decArgo_soft/soft/decoder_api/decoder_bindings/mock_data/: __init__.py  float1.py
decArgo_soft/soft/decoder_api/decoder_bindings/utilities/: dict2json.py  setup_dir.py  setup_env.py
decArgo_soft/soft/decoder_api/input_files/: entrypoint.sh
decArgo_soft/soft/decoder_api/tests/: __init__.py  test_main.py
decArgo_soft/soft/sub/: add_chla_rtqc_to_profile_file.m  add_iridium_locations_in_trajectory_data.m  add_profile_date_and_location_201_to_229_2001_to_2003.m  add_rtqc_flags_to_netcdf_profile_and_trajectory_data.m  add_rtqc_to_profile_file.m  add_rtqc_to_trajectory_file.m  add_vertical_sampling_scheme_3T_228.m  add_vertical_sampling_scheme_ir_sbd.m  adjust_clock_offset_prv_ir_228.m  adjust_clock_offset_prv_ir_229.m  check_decoder_id.m  check_provor_arvor_hydraulic_type.m  clean_duplicates_in_received_data.m  compute_DOXY_1xx_7_9_to_11_13_to_16_21_22_24_26_to_34.m  compute_DOXY_ADJUSTED_profile.m  compute_DOXY_ADJUSTED_traj_meas.m  compute_PPOX_DOXY_1xx_7_9_to_11_13_to_15_21_22_24_26_to_34.m  compute_apex_apf11_argos_frequency.m  compute_ascent_aborted_flag.m  compute_prv_dates_221_228_229.m  (+256 more)
(+94 files in other folders)
