[tool.poetry]
name = "decoder_bindings"
version = "0.1.0"
description = "Bindings for the Decoder written in Python"
authors = ["James Clare <jamclar@noc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
poetry-dynamic-versioning = "^1.1.0"
pydantic = "^2.11.9"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
namespaces = false

[tool.poetry.scripts]
decoder = "decoder_bindings.main:main"


[tool.poetry.group.lint]
optional = true


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pyright = "1.1.401"
pytest = "^8.3.3"
pytest-mock= "3.15.1"
pytest-cov = "^4.0.0"
coverage = {extras = ["xml"], version = "^7.2.5"}
twine = "^4.0.2"
taskipy = "^1.14.1"
numpy = "^2.3.3"
pytest-env = "^1.1.5"

[tool.poetry.group.test.dependencies]
pyright = "1.1.401"
pytest = "^8.3.3"
pytest-mock= "3.15.1"
pytest-cov = "^4.0.0"
pytest-env = "^1.1.5"
coverage = {extras = ["xml"], version = "^7.2.5"}

[tool.poetry.group.lint.dependencies]
ruff = "^0.13.2"

[tool.poetry.group.build.dependencies]
twine = "^6.2.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.18.2"

[tool.tox]
env_list = ["test", "lint", "type", "build"]
requires = ["tox>=4.12"]

[tool.tox.env.test]
description = "Run unit tests"
commands_pre = ["poetry install --no-root --with dev"]
commands = ["pytest -q --disable-warnings --maxfail=1 --cov --cov-report=term-missing"]
setenv = { PYTHONPATH = "{toxinidir}" }

[tool.tox.env.lint]
description = "Ruff lint"
commands_pre = ["poetry install --no-root --with dev"]
commands = [
  "ruff format --check .",
  "ruff check ."
]

[tool.tox.env.type]
description = "Mypy type-check"
commands_pre = ["poetry install --no-root --with dev"]
commands = ["mypy src/"]  # adapte le chemin

[tool.tox.env.build]
description = "Build & verify dist"
commands_pre = ["poetry install --no-root --with dev"]
commands = [
  "python -m build",
  "twine check dist/*"
]

[tool.pytest.ini_options]
addopts = "-m 'not integration and not matlab'"
markers = [
  "integration: slow, requires external tools/data",
  "matlab: requires MATLAB Runtime and decoder executable"
]
env = [
    "DECODER_EXECUTABLE=../decArgo_soft/exec/run_decode_argo_2_nc_rt.sh",
    "MATLAB_RUNTIME=/home/lbruvryl/development/tmp/tmp_tc/matlab_runtime/R2022b",
    "DECODER_INPUT_DIR=../decArgo_demo/input/archive",
    "DECODER_OUTPUT_DIR=../decArgo_demo/output/nc",
]

[tool.taskipy.tasks]
lint = "ruff check decoder_bindings"
lint_fix = "ruff check decoder_bindings --fix"
format = "ruff format decoder_bindings"
types = "pyright decoder_bindings"
tests = """
coverage run -m  --source decoder_bindings --data-file=.coverage --omit tests/* pytest && \
coverage report -m --data-file=.coverage --skip-covered
"""